Lesson 13 HW - Spacing fixed

--- a/13LessonThirteen/homework/css/style.css
+++ b/13LessonThirteen/homework/css/style.css
@@ -5,13 +5,15 @@ h1, h2, h3, h4{
     background-image: url("../img/hero.jpg");
     background-position: center;
     background-repeat: no-repeat;
+    background-size: cover;
     text-align: center;
     height: 650px;
 }
 .hero h1{
-  margin-top: 200px;
+  padding-top: 200px;
   font-weight: 500px;
   font-size: 5em;
+  margin-top: 0px;
 }
 .pictures{
   margin: 20px 20px 0px 20px;
@@ -29,6 +31,8 @@ h1, h2, h3, h4{
 .price h1{
   text-align: center;
   font-family: Roboto Mono,Helvetica Neue,sans-serif;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 .details{
   text-align: center;
